tests/parsing/fail/invalid_ver_number.circom
pragma circom 2.0.a;

template T() {}

component main = T();
